x64/Release/component placer.ClangTidy.log
Error while processing D:\prog\component placer\Form1.cpp.
Error while processing D:\prog\component placer\main.cpp.
Error while processing D:\prog\component placer\x64\Release\.NETFramework,Version=v4.7.2.AssemblyAttributes.cpp.
D:\prog\component placer/Form1.h:6:18: error: expected namespace name [clang-diagnostic-error]
        using namespace System;
                        ^
Suppressed 12 warnings (12 in non-user code).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).
D:\prog\component placer/Form1.h:7:18: error: use of undeclared identifier 'System' [clang-diagnostic-error]
        using namespace System::ComponentModel;
                        ^
D:\prog\component placer/Form1.h:8:18: error: use of undeclared identifier 'System' [clang-diagnostic-error]
        using namespace System::Collections;
                        ^
D:\prog\component placer/Form1.h:9:18: error: use of undeclared identifier 'System' [clang-diagnostic-error]
        using namespace System::Windows::Forms;
                        ^
D:\prog\component placer/Form1.h:10:18: error: use of undeclared identifier 'System' [clang-diagnostic-error]
        using namespace System::Data;
                        ^
D:\prog\component placer/Form1.h:11:18: error: use of undeclared identifier 'System' [clang-diagnostic-error]
        using namespace System::Drawing;
                        ^
D:\prog\component placer/Form1.h:16:2: error: expected unqualified-id [clang-diagnostic-error]
        public ref class Form1 : public System::Windows::Forms::Form
        ^
D:\prog\component placer\main.cpp:1:19: warning: extra tokens at end of #include directive [clang-diagnostic-extra-tokens]
#include "Form1.h";
                  ^
                  //
D:\prog\component placer\main.cpp:3:9: warning: '_WIN64' macro redefined [clang-diagnostic-macro-redefined]
#define _WIN64
        ^
note: previous definition is here
D:\prog\component placer\main.cpp:7:16: error: use of undeclared identifier 'System' [clang-diagnostic-error]
int main(array<System::String^>^ args)
               ^
D:\prog\component placer\main.cpp:7:31: error: expected expression [clang-diagnostic-error]
int main(array<System::String^>^ args)
                              ^
D:\prog\component placer\main.cpp:7:32: error: blocks support disabled - compile with -fblocks or pick a deployment target that supports them [clang-diagnostic-error]
int main(array<System::String^>^ args)
                               ^
D:\prog\component placer\main.cpp:7:34: error: block pointer to non-function type is invalid [clang-diagnostic-error]
int main(array<System::String^>^ args)
                                 ^
D:\prog\component placer\main.cpp:11:5: error: use of undeclared identifier 'Application' [clang-diagnostic-error]
    Application::EnableVisualStyles();
    ^
D:\prog\component placer\main.cpp:12:5: error: use of undeclared identifier 'Application' [clang-diagnostic-error]
    Application::SetCompatibleTextRenderingDefault(false);
    ^
D:\prog\component placer\main.cpp:13:5: error: use of undeclared identifier 'Application' [clang-diagnostic-error]
    Application::Run(gcnew Form1());
    ^
D:\prog\component placer\main.cpp:13:22: error: use of undeclared identifier 'gcnew' [clang-diagnostic-error]
    Application::Run(gcnew Form1());
                     ^
D:\prog\component placer\x64\Release\.NETFramework,Version=v4.7.2.AssemblyAttributes.cpp:1:2: error: invalid preprocessing directive [clang-diagnostic-error]
#using <mscorlib.dll>
 ^
D:\prog\component placer\x64\Release\.NETFramework,Version=v4.7.2.AssemblyAttributes.cpp:2:145: warning: declaration does not declare anything [clang-diagnostic-missing-declarations]
[assembly: System::Runtime::Versioning::TargetFrameworkAttribute(L".NETFramework,Version=v4.7.2", FrameworkDisplayName=L".NET Framework 4.7.2")];
                                                                                                                                                ^
